<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutActivity"
    android:padding="16dp">


    <TextView
        android:id="@+id/heading_4"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:textColor="@color/dark_blue"

        android:layout_height="wrap_content"
        android:text="@string/heading_4"
        />
    <TextView
        android:id="@+id/subheading_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/heading_4"
        app:layout_constraintEnd_toEndOf="@id/heading_4"
        android:text="@string/subheading_4"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/heading_4"/>

    <ImageView
        android:id="@+id/imageAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
    app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/heading_4"
        app:layout_constraintTop_toBottomOf="@id/subheading_4"
        android:src="@drawable/asclepius_about"
        android:contentDescription="@string/img_desc" />

    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="0dp"
        android:layout_marginTop="18dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/heading_4"
        app:layout_constraintTop_toBottomOf="@id/imageAbout"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_us"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        app:strokeColor="@color/dark_blue"
        app:strokeWidth="2dp"
        android:layout_width="0dp"
        android:paddingVertical="15dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs"
        android:layout_marginTop="32dp"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@color/light_blue"
        />


    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/madeby"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"/>



</androidx.constraintlayout.widget.ConstraintLayout>