<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    android:background="@drawable/background_with_border"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView_article"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/white"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_articleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_verdictLabel_placeholder"
        android:textColor="@color/btn_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/imageView_article"
        app:layout_constraintTop_toBottomOf="@id/imageView_article" />

    <TextView
        android:id="@+id/tv_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="4dp"
        android:text="@string/tv_confidenceScore_placeholder"
        android:gravity="center"
        android:textColor="@color/btn_text"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_news"
        app:layout_constraintStart_toEndOf="@id/tv_releaseDate"
        app:layout_constraintTop_toTopOf="@id/tv_releaseDate" />

    <TextView
        android:id="@+id/tv_releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/tv_time_placeholder"
        android:textColor="@color/btn_text"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="@id/imageView_article"
        app:layout_constraintTop_toBottomOf="@id/tv_articleTitle" />

    <TextView
        android:id="@+id/tv_articleContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/severe_desc"
        android:textColor="@color/article_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_readMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_bg"
        android:text="@string/btn_readMore"
        android:textColor="@color/btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_articleContent"
        app:strokeColor="@color/btn_stroke"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>