<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:background="@drawable/background_with_border"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView_history"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_verdictLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_verdictLabel_placeholder"
        android:layout_marginTop="16dp"
        android:textColor="@color/btn_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/imageView_history"
        app:layout_constraintTop_toBottomOf="@id/imageView_history" />

    <TextView
        android:id="@+id/tv_confidenceScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_confidenceScore_placeholder"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:drawablePadding="16dp"
        app:drawableStartCompat="@drawable/ic_percentage"
        app:layout_constraintTop_toBottomOf="@id/tv_verdictLabel"
        app:layout_constraintStart_toStartOf="@id/tv_verdictLabel" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/tv_time_placeholder"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/tv_confidenceScore"
        app:layout_constraintStart_toStartOf="@id/imageView_history" />

</androidx.constraintlayout.widget.ConstraintLayout>