<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.history.HistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            android:id="@+id/heading_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/heading_3"
            android:textColor="@color/dark_blue"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/heading_3"
            app:layout_constraintStart_toStartOf="@+id/heading_3"
            app:layout_constraintTop_toBottomOf="@id/heading_3" />

        <ImageView
            android:id="@+id/empty_state"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/emptystate"
            app:layout_constraintEnd_toEndOf="@id/history_description"
            app:layout_constraintStart_toStartOf="@id/history_description"
            app:layout_constraintTop_toBottomOf="@id/history_description" />

        <TextView
            android:id="@+id/no_historyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_history"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/empty_state"
            app:layout_constraintStart_toStartOf="@id/empty_state"
            app:layout_constraintTop_toBottomOf="@id/empty_state" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history_description"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/history_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
